[gd_scene load_steps=16 format=2]

[ext_resource path="res://arenas/arena_skeleton.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/arenas/swimming_pool/entities.png" type="Texture" id=2]
[ext_resource path="res://assets/arenas/swimming_pool/water_surface.png" type="Texture" id=3]
[ext_resource path="res://assets/arenas/swimming_pool/bg.png" type="Texture" id=4]
[ext_resource path="res://scripts/arenas/swimming_pool/water_surface.gd" type="Script" id=5]
[ext_resource path="res://scripts/arenas/swimming_pool/custom_logic.gd" type="Script" id=6]
[ext_resource path="res://assets/arenas/swimming_pool/water_line.png" type="Texture" id=7]
[ext_resource path="res://assets/arenas/swimming_pool/water_surface_mask.png" type="Texture" id=8]
[ext_resource path="res://assets/arenas/graveyard/light_texture.png" type="Texture" id=9]
[ext_resource path="res://scripts/arenas/swimming_pool/drain.gd" type="Script" id=10]

[sub_resource type="ShaderMaterial" id=4]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 971.08, 44.0072 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21.75, 343.168 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 21.75, 850.283 )

[sub_resource type="CircleShape2D" id=6]
radius = 256.665

[node name="DarkJungle" instance=ExtResource( 1 )]

[node name="Bg" type="Sprite" parent="Map/BG" index="0"]
texture = ExtResource( 4 )
centered = false

[node name="WaterSurface" type="Sprite" parent="Map/BG" index="1"]
self_modulate = Color( 1, 1, 1, 0.6 )
material = SubResource( 4 )
texture = ExtResource( 3 )
centered = false
script = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="Map/BG/WaterSurface" index="0"]
position = Vector2( 960, 540 )
collision_layer = 42
collision_mask = 42

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/BG/WaterSurface/Area2D" index="0"]
visible = false
polygon = PoolVector2Array( -632.815, -486.022, 915.567, -489.586, 917.349, 68.1167, 596.625, 66.335, 596.625, 492.184, -914.339, 488.621, -914.339, -94.0269, -631.033, -94.0269 )

[node name="WaterLine" type="Area2D" parent="Map/BG/WaterSurface" index="1"]
position = Vector2( 960, 540 )
collision_layer = 42
collision_mask = 34

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/BG/WaterSurface/WaterLine" index="0"]
position = Vector2( -4.0459, -0.729675 )
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="Map/BG/WaterSurface/WaterLine" index="1" groups=[
"WaterLines",
]]
light_mask = 4
position = Vector2( 0, -1.99996 )
scale = Vector2( 1, 0.625 )
texture = ExtResource( 7 )

[node name="WaterLineMask" type="Light2D" parent="Map/BG/WaterSurface" index="2"]
texture = ExtResource( 8 )
offset = Vector2( 960, 540 )
mode = 3
range_item_cull_mask = 4

[node name="Entities" type="Sprite" parent="Map/Entities" index="0"]
texture = ExtResource( 2 )
centered = false

[node name="Shrub" type="StaticBody2D" parent="Map/Entities" index="1" groups=[
"Stuckables",
]]
position = Vector2( 167.017, 2.02472 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/Entities/Shrub" index="0"]
polygon = PoolVector2Array( -117.101, -6.11693, -99.6395, 19.2815, -71.8599, 51.8232, -26.619, 64.5224, 27.3526, 64.5224, 86.0865, 44.6799, 117.834, 3.40748, 119.422, -12.4665 )

[node name="Shrub2" type="StaticBody2D" parent="Map/Entities" index="2" groups=[
"Stuckables",
]]
position = Vector2( -6.73523, 292.318 )
rotation = -1.5708

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/Entities/Shrub2" index="0"]
polygon = PoolVector2Array( -117.101, -6.11693, -99.6395, 19.2815, -71.8599, 51.8232, -26.619, 64.5224, 27.3526, 64.5224, 86.0865, 44.6799, 117.834, 3.40748, 119.422, -12.4665 )

[node name="Shrub3" type="StaticBody2D" parent="Map/Entities" index="3" groups=[
"Stuckables",
]]
position = Vector2( 1917.25, 764.838 )
rotation = 1.5708

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/Entities/Shrub3" index="0"]
polygon = PoolVector2Array( -117.101, -6.11693, -99.6395, 19.2815, -71.8599, 51.8232, -26.619, 64.5224, 27.3526, 64.5224, 86.0865, 44.6799, 117.834, 3.40748, 119.422, -12.4665 )

[node name="Shrub4" type="StaticBody2D" parent="Map/Entities" index="4" groups=[
"Stuckables",
]]
position = Vector2( 1732.9, 1084.8 )
rotation = 3.14159

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/Entities/Shrub4" index="0"]
polygon = PoolVector2Array( -117.101, -6.11693, -99.6395, 19.2815, -71.8599, 51.8232, -26.619, 64.5224, 27.3526, 64.5224, 86.0865, 44.6799, 117.834, 3.40748, 119.422, -12.4665 )

[node name="Shrub5" type="StaticBody2D" parent="Map/Entities" index="5" groups=[
"Stuckables",
]]
position = Vector2( 8.55292, 1080.04 )
rotation = 3.14159

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/Entities/Shrub5" index="0"]
polygon = PoolVector2Array( -88.2479, -3.96179, -83.4911, 23.39, -57.3285, 55.4987, -37.112, 75.7151, 5.69944, 91.1748, 22.3483, 91.1748, 19.9699, -15.8539 )

[node name="Shrub6" type="StaticBody2D" parent="Map/Entities" index="6" groups=[
"Stuckables",
]]
position = Vector2( 1907.23, -0.275055 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map/Entities/Shrub6" index="0"]
polygon = PoolVector2Array( -88.2479, -3.96179, -83.4911, 23.39, -57.3285, 55.4987, -37.112, 75.7151, 5.69944, 91.1748, 22.3483, 91.1748, 19.9699, -15.8539 )

[node name="StaticBody2D" type="StaticBody2D" parent="Map/Entities" index="7"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/Entities/StaticBody2D" index="0"]
position = Vector2( 2.76015, 747.252 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Map/Entities/StaticBody2D" index="1"]
position = Vector2( 1914, 304.981 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Map/Entities/StaticBody2D" index="2"]
position = Vector2( 763.351, 1085.1 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Map/Entities/StaticBody2D" index="3"]
position = Vector2( 1134.38, 2.92261 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Drain" type="Area2D" parent="Map/Entities" index="8"]
position = Vector2( 1419.7, 366.524 )
collision_layer = 32
collision_mask = 32
script = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/Entities/Drain" index="0"]
shape = SubResource( 6 )

[node name="Node2D" type="Node2D" parent="Collectors" index="0"]
position = Vector2( 171.053, 250 )

[node name="Node2D2" type="Node2D" parent="Collectors" index="1"]
position = Vector2( 1735.47, 850 )

[node name="Node2D3" type="Node2D" parent="Collectors" index="2"]
position = Vector2( 204.201, 850 )

[node name="Node2D4" type="Node2D" parent="Collectors" index="3"]
position = Vector2( 1705.5, 250 )

[node name="Node2D5" type="Node2D" parent="Collectors" index="4"]
position = Vector2( 686.656, 250 )

[node name="Node2D6" type="Node2D" parent="Collectors" index="5"]
position = Vector2( 1193.08, 850 )

[node name="Node2D7" type="Node2D" parent="Collectors" index="6"]
position = Vector2( 689.652, 850 )

[node name="Node2D8" type="Node2D" parent="Collectors" index="7"]
position = Vector2( 1172.11, 250 )

[node name="Node2D" type="Node2D" parent="Dumplings" index="0"]
position = Vector2( 170.807, 248.719 )

[node name="Node2D2" type="Node2D" parent="Dumplings" index="1"]
position = Vector2( 1735.04, 854.035 )

[node name="Node2D3" type="Node2D" parent="Dumplings" index="2"]
position = Vector2( 958.916, 539.391 )

[node name="CustomLogic" parent="." index="3"]
script = ExtResource( 6 )
night_color = Color( 0.0588235, 0.254902, 0.207843, 1 )

[node name="Timer" type="Timer" parent="CustomLogic" index="0"]
wait_time = 20.0
autostart = true

[node name="ItemTimer" type="Timer" parent="CustomLogic" index="1"]
one_shot = true

[node name="CanvasModulate" type="CanvasModulate" parent="CustomLogic" index="2"]
color = Color( 0.0588235, 0.254902, 0.207843, 1 )

[node name="Tween" type="Tween" parent="CustomLogic" index="3"]

[node name="Light2D" type="Light2D" parent="CustomLogic" index="4" groups=[
"KeepLights",
]]
position = Vector2( 680.357, 362.857 )
texture = ExtResource( 9 )
texture_scale = 2.0
energy = 0.6
range_item_cull_mask = 3
shadow_item_cull_mask = 2

[node name="Light2D2" type="Light2D" parent="CustomLogic" index="5" groups=[
"KeepLights",
]]
position = Vector2( 307.421, 730.754 )
texture = ExtResource( 9 )
texture_scale = 2.0
energy = 0.6
range_item_cull_mask = 3
shadow_item_cull_mask = 2

[node name="Light2D3" type="Light2D" parent="CustomLogic" index="6" groups=[
"KeepLights",
]]
position = Vector2( 874.385, 917.223 )
texture = ExtResource( 9 )
texture_scale = 2.0
energy = 0.6
range_item_cull_mask = 3
shadow_item_cull_mask = 2

[node name="Light2D4" type="Light2D" parent="CustomLogic" index="7" groups=[
"KeepLights",
]]
position = Vector2( 1237.24, 549.326 )
texture = ExtResource( 9 )
texture_scale = 2.0
energy = 0.6
range_item_cull_mask = 3
shadow_item_cull_mask = 2

[node name="Light2D5" type="Light2D" parent="CustomLogic" index="8" groups=[
"KeepLights",
]]
position = Vector2( 1784.05, 178.909 )
texture = ExtResource( 9 )
texture_scale = 2.0
energy = 0.6
range_item_cull_mask = 3
shadow_item_cull_mask = 2

[connection signal="body_entered" from="Map/BG/WaterSurface/Area2D" to="Map/BG/WaterSurface" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Map/BG/WaterSurface/Area2D" to="Map/BG/WaterSurface" method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Map/BG/WaterSurface/WaterLine" to="Map/BG/WaterSurface" method="_on_WaterLine_body_entered"]
[connection signal="timeout" from="CustomLogic/Timer" to="CustomLogic" method="_on_Timer_timeout"]
[connection signal="timeout" from="CustomLogic/ItemTimer" to="CustomLogic" method="_on_ItemTimer_timeout"]
